--- a/app/assets/stylesheets/app.css.sass
+++ b/app/assets/stylesheets/app.css.sass
@@ -1,7 +1,7 @@
 // Cores
 $blue: #0BBCE8
 $blue-dark: #033665
-$gray-dark: #5D5E60
+$gray-dark: #383B3B
 $yellow: #FFCF00
 
 $facebook-blue: #3d5a9b
