--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -193,6 +193,11 @@ form
     .counter
       +grid-column($columns: 12, $offset: 0)
 
+  .slide-2
+    .title
+      +grid-column(12)
+      text-align: center
+
   #share
     .facebook-share
       margin: 0 0 1em 0
