--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -54,6 +54,11 @@ p.lead
   p
     font-size: 1.1em
 
+.white
+  color: white
+  h2
+    color: white
+
 .slides-1-2
   background: asset-url("slide-1-2-bg.jpg") top center
   background-size: cover
@@ -133,9 +138,19 @@ p.lead
 
 .slide-4
   background: asset-url("slide-4-bg.jpg") top center
-  padding: 2em 0
+  padding: 3em 0
   .title
     text-align: right
+    &.white
+      +grid-column(12)
+      text-align: center
+      margin-bottom: 1em
+  .text
+    margin-bottom: 2em
+  .ocup
+    +grid-column(3)
+    text-align: center
+    height: 550px
 
 .close-reveal-modal
   text-decoration: none
@@ -206,7 +221,15 @@ form
   .slide-3
     .title, .text
       +grid-column(12)
-      text-align: center
+
+  .slide-4
+    .title, .text
+      +grid-column(12)
+      text-align: left
+    .ocup
+      +grid-column($columns: 6)
+      margin-bottom: 2em
+
   form
     +grid-column(8, true, true)
     .first_name_field, .last_name_field, .email_field, .submit_button
@@ -225,3 +248,8 @@ form
 @media (max-width: 500px)
   form
     +grid-column(12, true, true)
+
+  .slide-4
+    .ocup
+      +grid-column($columns: 12)
+      height: auto
