--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -12,7 +12,7 @@
                 | Pessoas pedindo a
                 br
                 | desmilitarização da justiça
-    
+
     .row
       .title
         h2 Você sabia que no Brasil você ainda pode ser julgado por um tribunal militar?
@@ -107,6 +107,13 @@
     .text
       p Qualquer pessoa acusada de cometer crime contra militares ou instituições militares federais pode ser julgado por um Tribunal Militar da União, sem necessidade de validação de provas pela Justiça civil.
       p Com a ocupação militar de espaços urbanos, cidadãos convivem com abordagens truculentas de militares que se sentem protegidos por um sistema de Justiça no qual eles mesmos estão no comando.
+    .title.white
+      h2 Ocupações militares
+  .row
+    .ocup= image_tag("ocup-1.png")
+    .ocup= image_tag("ocup-2.png")
+    .ocup= image_tag("ocup-3.png")
+    .ocup= image_tag("ocup-4.png")
 
 #preview_email.small.reveal-modal{data-reveal=true}
   p
