--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -115,6 +115,15 @@
     .ocup= image_tag("ocup-3.png")
     .ocup= image_tag("ocup-4.png")
 
+.slide-6
+  .row
+    .title
+      h2 A ADPF 289 pode desmilitarizar nossa justiça
+    .text
+      p A Procuradoria Geral da República entrou com pedido para o Supremo Tribunal Federal acabar com o julgamento de um cidadão civil por um tribunal militar, através de uma Arguição de Descumprimento de Preceito Fundamental (ADPF).
+      p A ADPF 289 já está sendo discutida e será julgada nos próximos meses. Por isso, é importante construir uma mobilização popular forte, que mostre para os ministros do STF que a sociedade civil quer uma Justiça com “J” maiúsculo, sem resquícios da Ditadura.
+      p A democracia é um processo em construção, e precisamos garantir que nossa voz será ouvida. Inscreva-se agora e faça parte da missão pela desmilitarização da justiça!
+
 #preview_email.small.reveal-modal{data-reveal=true}
   p
     strong Exmo(a). Sr(a). Ministro(a) do Supremo Tribunal Federal,
