--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -108,6 +108,18 @@
       p Qualquer pessoa acusada de cometer crime contra militares ou instituições militares federais pode ser julgado por um Tribunal Militar da União, sem necessidade de validação de provas pela Justiça civil.
       p Com a ocupação militar de espaços urbanos, cidadãos convivem com abordagens truculentas de militares que se sentem protegidos por um sistema de Justiça no qual eles mesmos estão no comando.
 
+.slide-5
+  .row
+    .col
+      .title
+        h2 A Justiça Militar só beneficia os militares
+      p Os julgamentos da Justiça Militar são feitos com base no Código Penal Militar e no Código de Processo Penal de Militar, ambos escritos em 1969, em plena Ditadura. 
+    .col
+      = image_tag 'slide-5-square.png'
+      p Em 2013, o ex-ministro do STF Joaquim Barbosa questionou os custos da Justiça Militar brasileira.
+    .col.square
+      p Em 2012 o custo médio de um processo julgado na Justiça Militar da União foi 55 vezes superior a um processo na Justiça Federal.
+
 #preview_email.small.reveal-modal{data-reveal=true}
   p
     strong Exmo(a). Sr(a). Ministro(a) do Supremo Tribunal Federal,
