--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -137,6 +137,26 @@ p.lead
   .title
     text-align: right
 
+.slide-5
+  background: $blue
+  padding: 2em 0 6em 0
+  .col
+    +grid-column(4)
+    .title, h2, p
+      +grid-column(12)
+      padding: 0   
+    &.square
+      p
+        border: white 2px solid
+        padding: 1em
+        margin-bottom: 0
+  .title
+    display: block
+    h2
+      color: $gray-dark
+  img
+    padding-bottom: 1em
+
 .close-reveal-modal
   text-decoration: none
 
@@ -204,14 +224,19 @@ form
       +grid-column(12)
       text-align: center
 
-  #share
-    .facebook-share
-      margin: 0 0 1em 0
-
   .slide-3
     .title, .text
       +grid-column(12)
       text-align: center
+
+  .slide-5
+    .col
+      +grid-column(8, $center: true)
+
+  #share
+    .facebook-share
+      margin: 0 0 1em 0
+
   form
     +grid-column(8, true, true)
     .first_name_field, .last_name_field, .email_field, .submit_button
@@ -220,6 +245,10 @@ form
       margin-bottom: 1em
 
 @media (max-width: 750px)
+  .slide-5
+    .col
+      +grid-column(10, $center: true)
+
   form
     +grid-column(12, true, true)
     .first_name_field, .last_name_field, .email_field, .submit_button
@@ -228,5 +257,9 @@ form
       margin-bottom: 1em
 
 @media (max-width: 500px)
+  .slide-5
+    .col
+      +grid-column(12)
+      
   form
     +grid-column(12, true, true)
