--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -124,6 +124,28 @@
       p A ADPF 289 já está sendo discutida e será julgada nos próximos meses. Por isso, é importante construir uma mobilização popular forte, que mostre para os ministros do STF que a sociedade civil quer uma Justiça com “J” maiúsculo, sem resquícios da Ditadura.
       p A democracia é um processo em construção, e precisamos garantir que nossa voz será ouvida. Inscreva-se agora e faça parte da missão pela desmilitarização da justiça!
 
+.slide-7
+  .row
+    .title
+      h2 Quem são os criadores dessa mobilização?
+    .image= image_tag "partners.png"
+    .text
+      p A Rede Meu Rio existe para aproximar o cidadão da política carioca, mostrando que uma cidade boa pra todo mundo deve ser construída de forma democrática e inclusiva. O Rio de Janeiro é hoje uma das cidades brasileiras mais afetadas pela ocupação de forças militares no território, e por isso cidadãos cariocas são especialmente vulneráveis a acusações de desacato que podem ser julgadas por tribunais militares.
+      p Acreditamos que essa herança da Ditadura limita nossa capacidade de consolidar instituições democráticas, e por isso entramos na luta pela aprovação da ADPF 289.
+      p Além disso, estamos construindo essa mobilização junto com várias organizações de referência no tema. São elas:
+      p
+        strong Grupo Tortura Nunca Mais do Rio de Janeiro (GTNM/RJ)
+        | Movimento criado, a partir do declínio dos Comitês Brasileiros pela Anistia (CBA), em 1985 pelos ex-presos políticos, suas famílias e pessoas comprometidas com a luta pelos direitos humanos. O GTNM/RJ inclusive está participando ativamente do processo da ADPF 289, como amicus curiae, sendo representados pela Cliníca UERJ Direitos.
+      p
+        strong Movimento Direito Para Quem (DPQ)
+        | Coletivo de estudantes e profissionais que atuam na defesa dos direitos humanos e sociais.
+      p
+        strong Instituto de Defensores dos Direitos Humanos e Cidadania (DDH)
+        | Faz advocacia gratuita em casos de violações à direitos fundamentais, além de desenvolver programas de promoção e defesa ds direitos humanos desde 2007.
+      p
+        strong O Coletivo Papo Reto
+        | Um coletivo de comunicação independente oriundo do Complexo do Alemão. O principal objetivo do grupo é realizar a comunicação em suas mais variadas vertentes de maneira que a população favelada seja protagonista e/ou se veja representada plenamente no conteúdo publicado.
+
 #preview_email.small.reveal-modal{data-reveal=true}
   p
     strong Exmo(a). Sr(a). Ministro(a) do Supremo Tribunal Federal,
