--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -144,6 +144,14 @@
         strong O Coletivo Papo Reto
         | Um coletivo de comunicação independente oriundo do Complexo do Alemão. O principal objetivo do grupo é realizar a comunicação em suas mais variadas vertentes de maneira que a população favelada seja protagonista e/ou se veja representada plenamente no conteúdo publicado.
 
+.slide-8
+  .row
+    .title
+      h2 Quer saber mais?
+    .text
+      p= link_to 'clique aqui para consultar as fontes', 'https://docs.google.com/a/meurio.org.br/document/d/1lywMzXzG4LMRLdjbysB9IoHqeflKQnyqKf8CBi6UiSA', target: :blank, class: :external_link
+
+
 #preview_email.small.reveal-modal{data-reveal=true}
   p
     strong Exmo(a). Sr(a). Ministro(a) do Supremo Tribunal Federal,
