--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -61,6 +61,11 @@ p.lead
   h2
     color: white
 
+.divider
+  +grid-column(12)
+  text-align: center
+  margin-top: 2em
+
 .slides-1-2
   background: asset-url("slide-1-2-bg.jpg") top center
   background-size: cover
@@ -156,7 +161,7 @@ p.lead
 
 .slide-5
   background: $blue
-  padding: 2em 0 6em 0
+  padding: 2em 0 2em 0
   .col
     +grid-column(4)
     .title, h2, p
