--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -36,6 +36,9 @@
             .submit_button
               = form.submit "Inscreva-se agora", id: 'poke-submit-button', class: [:button, :radius]
 
+    .row
+      .divider= image_tag("divider-dark.png")
+
   .slide-2
     .row
       .title
@@ -50,6 +53,8 @@
         p T. foi condenada a 6 meses de prisão pela primeira instância da Justiça Militar da União, que usou testemunhos de militares do próprio grupamento que a agrediu. O Superior Tribunal Militar manteve a decisão, e T. cumpre pena em regime aberto.
 
         p Os militares envolvidos no caso não foram processados.
+    .row
+      .divider= image_tag("divider-dark.png")
 
 / .row.email_message
 /   .wraper
@@ -85,6 +90,8 @@
       p
         strong Passo 3:
         | Ao contrário da Justiça Federal, onde caberia mais um recurso para o STJ, na Justiça Militar da União a 2ª instância é o último momento possível do processo.
+    .row
+      .divider= image_tag("divider-blue.png")
 
 .slide-4
   .row
@@ -100,6 +107,8 @@
     .ocup= image_tag("ocup-2.png")
     .ocup= image_tag("ocup-3.png")
     .ocup= image_tag("ocup-4.png")
+  .row
+    .divider= image_tag("divider-dark.png")
 
 .slide-5
   .row
@@ -112,6 +121,8 @@
       p Em 2013, o ex-ministro do STF Joaquim Barbosa questionou os custos da Justiça Militar brasileira.
     .col.square
       p Em 2012 o custo médio de um processo julgado na Justiça Militar da União foi 55 vezes superior a um processo na Justiça Federal.
+  .row
+    .divider= image_tag("divider-blue.png")
 
 .slide-6
   .row
@@ -121,6 +132,8 @@
       p A Procuradoria Geral da República entrou com pedido para o Supremo Tribunal Federal acabar com o julgamento de um cidadão civil por um tribunal militar, através de uma Arguição de Descumprimento de Preceito Fundamental (ADPF).
       p A ADPF 289 já está sendo discutida e será julgada nos próximos meses. Por isso, é importante construir uma mobilização popular forte, que mostre para os ministros do STF que a sociedade civil quer uma Justiça com “J” maiúsculo, sem resquícios da Ditadura.
       p A democracia é um processo em construção, e precisamos garantir que nossa voz será ouvida. Inscreva-se agora e faça parte da missão pela desmilitarização da justiça!
+  .row
+    .divider= image_tag("divider-dark.png")
 
 .slide-7
   .row
@@ -143,6 +156,8 @@
       p
         strong O Coletivo Papo Reto
         | Um coletivo de comunicação independente oriundo do Complexo do Alemão. O principal objetivo do grupo é realizar a comunicação em suas mais variadas vertentes de maneira que a população favelada seja protagonista e/ou se veja representada plenamente no conteúdo publicado.
+  .row
+    .divider= image_tag("divider-blue.png")
 
 .slide-8
   .row
