--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -108,6 +108,12 @@
     .ocup= image_tag("ocup-3.png")
     .ocup= image_tag("ocup-4.png")
   .row
+    .title.white
+      h2 Outros contextos
+  .row
+    .ocup.fifth= image_tag("ocup-5.png")
+    .ocup= image_tag("ocup-6.png")
+  .row
     .divider= image_tag("divider-dark.png")
 
 .slide-5
