--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -79,7 +79,12 @@ p.lead
   .email_message
     text-align: right
   .text
-    margin-bottom: 1em
+    margin-bottom: 2em
+    strong
+      color: white
+      font-size: inherit
+      font-weight: bold
+      display: inline
   .counter
     +grid-column($columns: 7, $offset: 5)
     margin-bottom: 2em
@@ -174,6 +179,11 @@ p.lead
         border: white 2px solid
         padding: 1em
         margin-bottom: 0
+    strong
+      color: white
+      font-size: inherit
+      font-weight: bold
+      display: inline
   .title
     display: block
     h2
@@ -186,6 +196,12 @@ p.lead
   padding: 3em 0
   .title
     text-align: right
+  .text
+    strong
+      color: white
+      font-size: inherit
+      font-weight: bolder
+      display: inline
 
 .slide-7
   background: $blue
