--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -19,9 +19,13 @@
         strong #DesmilitarizaçãodaJustiça
       .text
         p Apesar de vivermos em uma democracia,  qualquer cidadão civil pode virar reú da justiça militar, caso seja acusado de desacato ou outras formas de insubordinação contra membros das forças armadas.
-        p A boa notícia é que a Procuradoria Geral da República acaba de entrar com uma ação no Supremo Tribunal Federal para acabar com esse absurdo. E o voto do STF deve ocorrer ainda esse ano!
-        p Mas sabemos que os militares não querem abrir mão de seus privilégios, e já estão se movimentando para tentar influenciar os ministros do STF na semana do voto. É por isso que estamos unindo pessoas dispostas a orquestrar um contra-ataque.
-        p Juntos, vamos criar a maior mobilização pela desmilitarização da justiça que o Brasil já viu. Venha fazer história junto com a gente! Mobilizadores inscritos receberão um email na semana do voto com o plano da missão para pressionar os ministros do STF nas ruas e nas redes. Inscreva-se agora:
+        p
+          strong A boa notícia é que a Procuradoria Geral da República acaba de entrar com uma ação no Supremo Tribunal Federal para acabar com esse absurdo.
+          |  E o voto do STF deve ocorrer ainda esse ano!
+        p
+          strong Mas sabemos que os militares não querem abrir mão de seus privilégios, e já estão se movimentando para tentar influenciar os ministros do STF na semana do voto. É por isso que estamos unindo pessoas dispostas a orquestrar um contra-ataque.
+        p Juntos, vamos criar a maior mobilização pela desmilitarização da justiça que o Brasil já viu.
+        strong  Mobilizadores inscritos receberão um email na semana do voto com o plano da missão.
 
     .form_wraper
       .row
@@ -88,7 +92,7 @@
 
     .text
       p
-        strong Passo 3:
+        strong Fim da linha:
         | Ao contrário da Justiça Federal, onde caberia mais um recurso para o STJ, na Justiça Militar da União a 2ª instância é o último momento possível do processo.
     .row
       .divider= image_tag("divider-blue.png")
@@ -121,12 +125,16 @@
     .col
       .title
         h2 A Justiça Militar só beneficia os militares
-      p Os julgamentos da Justiça Militar são feitos com base no Código Penal Militar e no Código de Processo Penal de Militar, ambos escritos em 1969, em plena Ditadura.
+      p
+        | Os julgamentos da Justiça Militar são feitos com base no
+        strong  Código Penal Militar e no Código de Processo Penal de Militar, ambos escritos em 1969, em plena Ditadura.
     .col
       = image_tag 'slide-5-square.png'
       p Em 2013, o ex-ministro do STF Joaquim Barbosa questionou os custos da Justiça Militar brasileira.
     .col.square
-      p Em 2012 o custo médio de um processo julgado na Justiça Militar da União foi 55 vezes superior a um processo na Justiça Federal.
+      p
+        | Em 2012 o custo médio de um processo julgado na Justiça Militar da União foi
+        strong  55 vezes superior a um processo na Justiça Federal.
   .row
     .divider= image_tag("divider-blue.png")
 
@@ -137,7 +145,9 @@
     .text
       p A Procuradoria Geral da República entrou com pedido para o Supremo Tribunal Federal acabar com o julgamento de um cidadão civil por um tribunal militar, através de uma Arguição de Descumprimento de Preceito Fundamental (ADPF).
       p A ADPF 289 já está sendo discutida e será julgada nos próximos meses. Por isso, é importante construir uma mobilização popular forte, que mostre para os ministros do STF que a sociedade civil quer uma Justiça com “J” maiúsculo, sem resquícios da Ditadura.
-      p A democracia é um processo em construção, e precisamos garantir que nossa voz será ouvida. Inscreva-se agora e faça parte da missão pela desmilitarização da justiça!
+      p
+        | A democracia é um processo em construção, e precisamos garantir que nossa voz será ouvida.
+        strong  Inscreva-se agora e faça parte da missão pela desmilitarização da justiça!
   .row
     .divider= image_tag("divider-dark.png")
 
@@ -160,7 +170,7 @@
         strong Instituto de Defensores dos Direitos Humanos e Cidadania (DDH)
         | Faz advocacia gratuita em casos de violações à direitos fundamentais, além de desenvolver programas de promoção e defesa ds direitos humanos desde 2007.
       p
-        strong O Coletivo Papo Reto
+        strong Coletivo Papo Reto
         | Um coletivo de comunicação independente oriundo do Complexo do Alemão. O principal objetivo do grupo é realizar a comunicação em suas mais variadas vertentes de maneira que a população favelada seja protagonista e/ou se veja representada plenamente no conteúdo publicado.
   .row
     .divider= image_tag("divider-blue.png")
