--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -213,9 +213,10 @@ p.lead
     h2
       color: $gray-dark
   .text
-    +grid-column($columns: 8, $center: true)
+    +grid-column($columns: 12)
     strong
       display: block
+      color: white
       line-height: 1em
   .image
     +grid-column(12)
