Change slide 1 style

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -72,10 +72,12 @@ p.lead
 
 .slide-1
   padding: 2em 0
+  background: $blue
   .title
     text-align: right
     h2
       margin-bottom: 1em
+      color: $gray-dark
   .email_message
     text-align: right
   .text
