--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -41,7 +41,7 @@
               = form.submit "Inscreva-se agora", id: 'poke-submit-button', class: [:button, :radius]
 
     .row
-      .divider= image_tag("divider-dark.png")
+      .divider= image_tag("divider-blue.png")
 
   .slide-2
     .row
