Fix layout for mobile

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -337,6 +337,8 @@ form
       text-align: left
 
   .slide-7
+    img
+      display: none
     .title, .text
       +grid-column(12)
       text-align: left
