--- a/app/views/poke_mailer/thanks_for_poke.html.slim
+++ b/app/views/poke_mailer/thanks_for_poke.html.slim
@@ -1,21 +1,20 @@
 p #{@poke.user.first_name},
 
-p Você agora faz parte do grupo de mobilizadores dispostos a enfrentar o poder dos militares e será notificado para agir em nome da desmilitarização da justiça.
+p Você agora faz parte do grupo de mobilizadores dispostos a enfrentar o poder dos militares e será notificado para agir pela desmilitarização da Justiça.
 
-p A primeira etapa do nosso plano de ação é enviar um email para o relator da ADPF 289, ministro Gilmar Mendes, pedindo que acabe com esse resquício de ditadura e tire os civis do banco dos reús do tribunal militar.
+p A primeira etapa do nosso plano de ação é enviar um email para o relator da ADPF 289, ministro Gilmar Mendes (audienciasgilmarmendes@stf.jus.br), pedindo o fim desse resquício de ditadura em nosso país. O texto abaixo pode servir de modelo para sua mensagem.
 
-p O email do ministro Gilmar Mendes é audienciasgilmarmendes@stf.jus.br
+p Vamos acabar com essa aberração autoritária!
 
 p Guilherme, Rodrigo, Alessandra e toda a equipe da Rede Meu Rio
 
-p PS: Caso prefira, você pode copiar e enviar o texto abaixo para o relator Gilmar Mendes.
+p
+  | -----
 
-p "Sr(a). Ministro(a) do Supremo Tribunal Federal Gilmar Mendes,
+p Sr(a). Ministro(a) do Supremo Tribunal Federal Gilmar Mendes,
 
 p O senhor é o relator da ADPF 289, que argui a inconstitucionalidade do julgamento de civis por tribunais militares.
 
-p Como o senhor deve saber, o julgamento de um civil por um tribunal militar é feito com base no Código Penal Militar de 1969. Para nós, cidadãos, isso representa uma afronta  à democracia.
+p Como o senhor deve saber, o julgamento de um civil por um tribunal militar é feito com base no Código Penal Militar de 1969. Para nós, cidadãos, isso representa uma afronta à democracia.
 
-p Por isso, pedimos que julgue favoravelmente o pedido da Procuradoria Geral da República.
-
-p Obrigado"
+p Por isso, pedimos que julgue favoravelmente o pedido da Procuradoria Geral da República, tirando os civis do banco dos reús do tribunal militar.
