--- a/app/views/pokes/new.html.slim
+++ b/app/views/pokes/new.html.slim
@@ -1,17 +1,16 @@
 .slides-1-2
   .slide-1
     .row
-      - if Poke.count >= 100
-        .counter
-          .digits-and-text
-            .digits
-              - Poke.count.to_s.chars.each do |c|
-                span.digit= c
-            .counter-text
-              span
-                | Pessoas pedindo a
-                br
-                | desmilitarização da justiça
+      .counter
+        .digits-and-text
+          .digits
+            - Poke.count.to_s.chars.each do |c|
+              span.digit= c
+          .counter-text
+            span
+              | Pessoas pedindo a
+              br
+              | desmilitarização da justiça
 
     .row
       .title
@@ -44,7 +43,7 @@
     .row
       .title
         h2 HOJE, CIVIS PODEM SER CONDENADOS PELA JUSTIÇA MILITAR
-        strong T. R, 26 anos, condenada a 2 anos e 6 meses de prisão pela Justiça Militar da União
+        strong T. R, 26 anos, condenada a 6 meses de prisão pela Justiça Militar da União
     .row
       .text
         p Complexo do Alemão, 2011. Era madrugada quando T.R, então com 22 anos, saiu de casa para ajudar seu vizinho, que gritava por socorro enquanto era colocado em um jipe por militares. Sem entender o que acontecia, ela pediu para falar com ele, mas recebeu em troca um tiro de borracha no pé esquerdo, 3 dedos quebrados, e uma prisão.
